# ua-client

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
src/: app.rs  client.rs  engine.rs  lib.rs  logger.rs  main.rs  messages.rs  model.rs  types.rs
src/eui/: app.rs  mod.rs  visuals.rs
src/eui/ui/: connect_bar.rs  endpoints_dialog.rs  mod.rs  node_summary.rs  tabs.rs  tree.rs
src/tui/: args.rs  attr_edit_dialog.rs  endpoint_dialog.rs  focus_frame.rs  focus_gate.rs  method_dialog.rs  mod.rs  persist.rs
src/ui/: connect_bar.rs  endpoints_dialog.rs  log_panel.rs  mod.rs  node_summary.rs  tabs.rs  tree.rs
