[package]
name = "ua-client"
version = "0.5.0"
edition = "2024"
description = "Native OPC UA browser/inspector GUI built on async-opcua and egui"
readme = "README.md"
homepage = "https://github.com/FreeOpcUa/ua-client"
repository = "https://github.com/FreeOpcUa/ua-client"
license = "MIT"
keywords = ["client", "egui", "gui", "opc-ua", "opcua"]
categories = ["gui", "network-programming"]

[dependencies]
anyhow = "1"
async-opcua = { version = "0.18", default-features = false, features = [
  "client",
  "json"
] }
eframe = { version = "0.30", default-features = false, features = [
  "default_fonts",
  "glow",
  "persistence",
  "wayland",
  "x11"
] }
egui = "0.30"
egui_extras = "0.30"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time"
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
