[package]
name = "ua-client"
version = "1.0.0"
edition = "2024"
description = "Native OPC UA browser/inspector GUI built on async-opcua and egui"
readme = "README.md"
homepage = "https://github.com/FreeOpcUa/ua-client"
repository = "https://github.com/FreeOpcUa/ua-client"
license = "MIT"
keywords = ["client", "egui", "gui", "opc-ua", "opcua"]
categories = ["gui", "network-programming"]

[features]
default = ["tui"]
tui = ["dep:cursive", "dep:arboard"]
egui = ["dep:eframe", "dep:egui", "dep:egui_extras", "dep:rfd"]

[dependencies]
anyhow = "1"
arboard = { version = "3", optional = true }
clap = { version = "4", features = ["derive"] }
async-opcua = { version = "0.18", default-features = false, features = [
  "client",
  "json"
] }
cursive = { version = "0.21", default-features = false, features = [
  "crossterm-backend"
], optional = true }
futures = "0.3"
eframe = { version = "0.30", default-features = false, features = [
  "default_fonts",
  "glow",
  "persistence",
  "wayland",
  "x11"
], optional = true }
egui = { version = "0.30", optional = true }
egui_extras = { version = "0.30", optional = true }
rfd = { version = "0.15", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time"
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "ua-tui"
required-features = ["tui"]

[[bin]]
name = "ua-client"
required-features = ["egui"]
